# sentinel-health-agent

./: .gitignore  README.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  simulator.py
app/backend/: main.py  schemas.py
app/backend/services/: history.py  rag_service.py
app/dashboard/: home.py
app/vector_db/: ingest_pdf.py
backend/: main.py  models.py  rag_service.py
