[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel_health_agent"
version = "0.1.0"
description = "AI Health Agent with RAG and Kafka"
dynamic = [
    "dependencies"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
